# data-engineering-zoomcamp

./: .gitignore  README.md
1_intro_to_data_engineering/: 1_README.md  README.md  intro.md
1_intro_to_data_engineering/postgres_sql/: .gitignore  Dockerfile  data_loading_parquet.py  ingest_data.py  insert_data.py  pipeline.py  pyproject.toml
1_intro_to_data_engineering/terraform/: main.tf  variables.tf
2_workflow_orchestration/: 2_README.md  2_README_airflow.md
2_workflow_orchestration/airflow/: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
2_workflow_orchestration/airflow_gcp/: .gitignore  Dockerfile
2_workflow_orchestration/airflow_gcp/dags/: data_ingestion_gcs.py  data_ingestion_gcs_multiFile.py
2_workflow_orchestration/airflow_local/: .env  Dockerfile  docker-compose.yaml
2_workflow_orchestration/airflow_local/dags/: data_ingestion_local.py  ingest_script_local.py
3_data_warehouse/: 3_data_warehouse.md
3_data_warehouse/airflow_gcs_2_bq/: .env_example  .gitignore  Dockerfile  docker-compose.yaml
3_data_warehouse/airflow_gcs_2_bq/dags/: gcs_2_bq_dag.py
4_analytics_engineering/: 4_README.md
4_analytics_engineering/dbt_cloud_taxi_data/: dbt_project.yml
4_analytics_engineering/dbt_cloud_taxi_data/macros/: get_payment_type_description.sql
4_analytics_engineering/dbt_cloud_taxi_data/models/core/: fact_trips.sql  schema.yml
4_analytics_engineering/dbt_cloud_taxi_data/models/staging/: schema.yml  stg_green_tripdata.sql  stg_yellow_tripdata.sql
5_batch/: 5_README.md  README.md
