[tool.poetry]
name = "poestgres-sql-test-project"
version = "0.1.0"
description = ""
authors = ["kkumyk <k.a.kumyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
sqlalchemy = "^2.0.35"
pyarrow = "^17.0.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
