[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["kkumyk <k.a.kkumyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
apache-airflow = {extras = ["bash", "python"], version = "^2.10"}
apache-airflow-providers-google = "^10.24.0"
pyarrow = "^17.0.0"
pandas = ">=2.1.2,<2.2"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
